Bug 141276 - Libreoffice ignore keypress when hovering outline arrow button
Summary: Libreoffice ignore keypress when hovering outline arrow button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.1.2 release
Hardware: All Windows (All)
: medium minor
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Writer-Outline-Folding
  Show dependency treegraph
 
Reported: 2021-03-26 23:13 UTC by Matheod
Modified: 2021-04-08 01:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matheod 2021-03-26 23:13:48 UTC
Description:
Libreoffice ignore keypress when hovering outline arrow button

Steps to Reproduce:
1. Enable outline
2. Create a document with some titles
3. Click on a title and hover the outline button
4. Try to write anything, try to press Ctrl+A

Actual Results:
Nothing happen

Expected Results:
The written text should be added to the document when we try to write something,
all the text should be selected when you press Ctrl+A


Reproducible: Always


User Profile Reset: No



Additional Info:
It's easy to randomly put your mouse over the button. Even more because the button doesn't appear immediatly so you can start writing and the button appear under your mouse and you can no longer write text.
----
Version: 7.1.1.2 (x64) / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: threaded
Comment 1 Jim Raykowski 2021-04-02 01:54:17 UTC
I agree.

Here is a patch that changes this behavior:
https://gerrit.libreoffice.org/c/core/+/113496
Comment 2 Commit Notification 2021-04-07 23:33:47 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d6e12c01e6c1dd050818a2ea76faa6bf89e41f1

tdf#141276 Don't grab focus to the fold buttons

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.