tdf#141276 Don't grab focus to the fold buttons

Change-Id: I30b612c168a1592549c57e871594cb840e6e5be8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113496
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>